welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:6: error: '(' expected but '{' found.
  if {maxi == rep}(rep=nums(1))
     ^max2Value:7: error: illegal start of simple expression
  var last = nums.length -1
  ^